# xsf-rust

./: .dprint.jsonc  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  justfile  katex.html  rustfmt.toml  wrapper.cpp  wrapper.h
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
src/: airy.rs  alg.rs  bessel.rs  beta.rs  bindings.rs  binom.rs  cdflib.rs  digamma.rs  ellip.rs  erf.rs  evalpoly.rs  exp.rs  expint.rs  ffi.rs  fp_error_metrics.rs  fresnel.rs  gamma.rs  hyp2f1.rs  iv_ratio.rs  kelvin.rs  lambertw.rs  legendre.rs  lib.rs  log.rs  log_exp.rs  loggamma.rs  macros.rs  mathieu.rs  par_cyl.rs  sici.rs  specfun.rs  sph_bessel.rs  sph_harm.rs  sphd_wave.rs  stats.rs  struve.rs  test_utils.rs  testing.rs  trig.rs  utils.rs  (+3 more)
src/cephes/: erfinv.rs  expn.rs  incbet.rs  incbi.rs  lanczos.rs  mod.rs  poch.rs  round.rs  spence.rs  unity.rs
src/numpy/: function_base.rs  mod.rs  nextafter.rs  npymath.rs
src/scipy_special/: agm.rs  bessel_prime.rs  boxcox.rs  comb.rs  convex_analysis.rs  diric.rs  factorial.rs  hyp0f1.rs  hypergeometric.rs  logsumexp.rs  mod.rs  ndtri_exp.rs  orthogonal_eval.rs  perm.rs  polygamma.rs  softplus.rs  spence.rs  spfun_stats.rs  stirling.rs  wright.rs
src/xsf/: airy.rs  alg.rs  bessel.rs  beta.rs  binom.rs  cdflib.rs  digamma.rs  ellip.rs  erf.rs  evalpoly.rs  exp.rs  expint.rs  fp_error_metrics.rs  fresnel.rs  gamma.rs  hyp2f1.rs  iv_ratio.rs  kelvin.rs  lambertw.rs  legendre.rs  log.rs  log_exp.rs  loggamma.rs  mathieu.rs  mod.rs  par_cyl.rs  sici.rs  specfun.rs  sph_bessel.rs  sph_harm.rs  sphd_wave.rs  stats.rs  struve.rs  trig.rs  wright_bessel.rs  zeta.rs
src/xsf/cephes/: erfinv.rs  expn.rs  incbet.rs  incbi.rs  lanczos.rs  mod.rs  poch.rs  round.rs  spence.rs  unity.rs
testing/: Cargo.toml
testing/src/: fp_error_metrics.rs  lib.rs  macros.rs  xsref.rs
tests/: README.md  parquet.rs  test_functions.rs
