[package]
name = "xsf"
version = "0.3.7+0.1.5"
authors = ["Joren Hammudoglu <jhammudoglu@gmail.com>"]
categories = ["api-bindings", "mathematics", "science"]
edition = "2024"
include = ["*.rs", "xsf/include", "katex.html"]
keywords = ["ffi", "bindings", "math", "xsf", "scipy"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/jorenham/xsf-rust"
rust-version = "1.85.1"
description = "Bindings for SciPy special functions"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]

[dependencies]
num-complex = "0.4.6"
num-traits = "0.2.19"

[build-dependencies]
cc = "1.2.49"
bindgen = { version = "0.72.1", default-features = false, features = ["runtime"] }

[dev-dependencies]
xsref = { path = "testing" }
